# BrilliantWallpaper

./: .gitignore  .project-config.yml  CMakeLists.txt  README.md  vcpkg.json
.github/actions/build-project/: action.yml
.github/workflows/: cmake-multi-platform.yml
cmake/: Options.cmake
files/: config.toml  install.bat
src/: App.cpp  App.hpp  CMakeLists.txt  Config.hpp  ConfigBuilder.hpp  GetInstallPath.cpp  GetInstallPath.hpp  ImageProcessing.cpp  ImageProcessing.hpp  Log.hpp  TomlConfigBuilder.cpp  TomlConfigBuilder.hpp  WallpaperSetter.cpp  WallpaperSetter.hpp  main.cpp
src/Win/: CMakeLists.txt  ComLib.cpp  ComLib.hpp  GetInstallPathImpl.hpp  WallpaperSetterImpl.cpp  WallpaperSetterImpl.hpp
test/: CMakeLists.txt  MockWallpaperSetter.hpp  TestImageProcessing.cpp  TestTomlConfigBuilder.cpp  test.cpp
test/Win/: CMakeLists.txt  main.cpp
test/files/: goodfile.toml  nomonitors.toml  notransdelay.toml  nowallpaper.toml
